# enumerable

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  clang.bat  gcc.bat  index.html  vc.bat
include/enumerable/: arrayEnumerable.h  concatEnumerable.h  constCastEnumerable.h  containerEnumerable.h  defaultIfEmptyEnumerable.h  distinctEnumerable.h  dynamicCastEnumerable.h  enumerable.h  enumerableTemplate.h  exceptEnumerable.h  heapEnumerable.h  ienumerable.h  inputIterator.h  intersectEnumerable.h  joinEnumerable.h  reinterpretCastEnumerable.h  selectEnumerable.h  skipEnumerable.h  staticCastEnumerable.h  takeEnumerable.h  valueIfEmptyEnumerable.h  whereEnumerable.h  zipEnumerable.h
include/range/: arrayEnumerable.h  concatEnumerable.h  constCastEnumerable.h  containerEnumerable.h  defaultIfEmptyEnumerable.h  distinctEnumerable.h  dynamicCastEnumerable.h  exceptEnumerable.h  inputRange.h  inputRangeIterator.h  intersectEnumerable.h  joinEnumerable.h  range.h  reinterpretCastEnumerable.h  selectEnumerable.h  staticCastEnumerable.h  valueIfEmptyEnumerable.h  whereEnumerable.h
test/: CMakeLists.txt  main.cpp  test_enumerable.cpp  test_foreach_lambda.cpp  test_heap_enumerable.cpp  test_iterator_foreach.cpp  test_reduce.cpp  test_sequenceEqual.cpp  test_skip.cpp  test_take.cpp  test_tocontainer.cpp
test/gtest_fix/: fix.diff
vs/: range.sln
vs/range/: main.cpp
vs/range/range-clang/: range-clang.vcxproj  range-clang.vcxproj.filters
vs/range/range-vc/: range-vc.vcxproj  range-vc.vcxproj.filters
